--- a/src/less/blocks/favorite-clients.less
+++ b/src/less/blocks/favorite-clients.less
@@ -1,5 +1,8 @@
 .favorite-clients {
   padding-top: 0;
+  background-color: #fff;
+  border-radius: 0 0 24px 24px;
+  z-index: 5;
 }
 
 .favorite-clients__header {
@@ -47,7 +50,7 @@
 
 .out {
   animation-name: out;
-  animation-duration: 0.5s;
+  animation-duration: 0.15s;
   animation-timing-function: cubic-bezier(0.550, 0.085, 0.680, 0.530);
   animation-fill-mode: both
 }
