--- a/src/less/blocks/main.less
+++ b/src/less/blocks/main.less
@@ -6,10 +6,11 @@
   margin-top: ~"calc(var(--header-height) * -1)";
 
   @media (min-width: @breakpoint-xl) {
-    margin-bottom: 735px;
+    margin-bottom: 685px;
     background-color: #fff;
     position: relative;
     z-index: 1;
     overflow: hidden;
+    border-radius: 0 0 24px 24px;
   }
 }
