--- a/src/less/blocks/more-projects.less
+++ b/src/less/blocks/more-projects.less
@@ -1,5 +1,13 @@
 .more-projects {
   background-color: #F2F2F5;
+  margin-top: -50px;
+  position: relative;
+  z-index: 2;
+  border-radius: 0 0 24px 24px;
+
+  @media (max-width: @breakpoint-xl - 1px) {
+    margin-top: -20px;
+  }
 }
 
 .more-projects__list {
