--- a/src/less/blocks/project-goals-small.less
+++ b/src/less/blocks/project-goals-small.less
@@ -1,5 +1,13 @@
 .project-goals-small {
   background-color: #F2F2F5;
+  margin-top: -50px;
+  position: relative;
+  z-index: 5;
+  border-radius: 0 0 24px 24px;
+
+  @media (max-width: @breakpoint-xl - 1px) {
+    margin-top: -20px;
+  }
 }
 
 .project-goals-small__list {
