--- a/src/less/blocks/project-goals.less
+++ b/src/less/blocks/project-goals.less
@@ -1,4 +1,8 @@
 .project-goals {
+  background-color: #fff;
+  border-radius: 0 0 24px 24px;
+  z-index: 6;
+
   @media (min-width: @breakpoint-xl) {
     padding-top: 120px;
   }
