--- a/src/less/blocks/works.less
+++ b/src/less/blocks/works.less
@@ -112,13 +112,18 @@
   font-size: 1.125rem;
   line-height: 1.175rem;
   font-weight: 500;
-  cursor: url(img/cursor-rect.svg) 5 5, auto;
+  cursor: url(img/cursor-rect.svg) 25 25, auto;
   transition-duration: 0.3s;
   transition-timing-function: ease-out;
   transition-property: color, border-color;
 
   span {
     margin-left: 6px;
+  }
+
+  &:hover {
+    border-color: #1B64FA;
+    color: #1B64FA;
   }
 }
 
