--- a/src/less/blocks/clients.less
+++ b/src/less/blocks/clients.less
@@ -1,6 +1,17 @@
 .clients {
   background-color: #d2d6da;
   overflow: hidden;
+  margin-top: -50px;
+  position: relative;
+  z-index: 2;
+
+  @media (max-width: @breakpoint-md - 1px) {
+    border-radius: 0 0 24px 24px;
+  }
+
+  @media (max-width: @breakpoint-xl - 1px) {
+    margin-top: -20px;
+  }
 }
 
 .clients__underline {
@@ -27,6 +38,7 @@
 .clients__slider {
   padding-bottom: 72px;
   overflow: visible;
+  cursor: url(img/drag-hover.svg) 60 60, auto;
 }
 
 .clients__slide {
