--- a/src/less/blocks/drag-text.less
+++ b/src/less/blocks/drag-text.less
@@ -32,6 +32,7 @@
   font-size: 5rem;
   line-height: 6rem;
   white-space: nowrap;
+  cursor: url(img/drag-hover.svg) 60 60, auto !important;
 
   @media (min-width: @breakpoint-md) {
     font-size: 6rem;
