--- a/src/less/blocks/grid-works.less
+++ b/src/less/blocks/grid-works.less
@@ -1,5 +1,8 @@
 .grid-works {
   padding-top: 40px;
+  background-color: #fff;
+  border-radius: 0 0 24px 24px;
+  z-index: 3;
 
   @media (min-width: @breakpoint-xl) {
     padding-top: 80px;
@@ -34,7 +37,6 @@
   margin-bottom: -20px;
   margin-right: ~"calc(var(--block-gap-horizontal, @{block-gap-horizontal}) * -1)";
   margin-left: ~"calc(var(--block-gap-horizontal, @{block-gap-horizontal}) * -1)";
-
 }
 
 .grid-works__tag {
@@ -90,12 +92,17 @@
   font-size: 1.125rem;
   line-height: 1.175rem;
   font-weight: 500;
-  cursor: url(img/cursor-rect.svg) 5 5, auto;
-  transition-duration: 0.3s;
+  cursor: url(img/cursor-rect.svg) 25 25, auto;
+  transition-duration: 0.35s;
   transition-timing-function: ease-out;
   transition-property: color, border-color;
 
   span {
     margin-left: 4px;
+  }
+
+  &:hover {
+    border-color: #1B64FA;
+    color: #1B64FA;
   }
 }
