--- a/src/less/blocks/next-project.less
+++ b/src/less/blocks/next-project.less
@@ -6,9 +6,21 @@
   padding-right: var(--block-gap-horizontal, @block-gap-horizontal);
   padding-left: var(--block-gap-horizontal, @block-gap-horizontal);
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
+  margin-top: -50px;
+  z-index: 2;
+  overflow: hidden;
+
+  @media (max-width: @breakpoint-xl - 1px) {
+    margin-top: -20px;
+    border-radius: 0 0 24px 24px;
+  }
 
   @media (min-width: @breakpoint-md) {
     height: 50vh;
+  }
+
+  a {
+    color: #fff;
   }
 }
 
