--- a/src/less/blocks/project-text.less
+++ b/src/less/blocks/project-text.less
@@ -1,3 +1,15 @@
+.project-text {
+  background-color: #fff;
+  margin-top: -50px;
+  position: relative;
+  z-index: 3;
+  border-radius: 0 0 24px 24px;
+
+  @media (max-width: @breakpoint-xl - 1px) {
+    margin-top: -20px;
+  }
+}
+
 .project-text__list {
   & + & {
     margin-top: 48px;
