--- a/src/less/general/mixins.less
+++ b/src/less/general/mixins.less
@@ -13,9 +13,9 @@
   padding-bottom: 10px;
   border-radius: 25px;
   white-space: nowrap;
-  transition-duration: 0.3s;
+  transition-duration: 0.35s;
   transition-timing-function: ease-out;
-  transition-property: color, border-color;
+  transition-property: color, border-color, background-color;
 
   &:focus {
     outline: none;
@@ -23,8 +23,9 @@
   }
 
   &:not([disabled]):hover {
-    border-color: #98A5B1;
-    color: #98A5B1;
+    border-color: @link-color;
+    background-color: @link-color;
+    color: #fff;
   }
 
   &:not([disabled]):active {
