--- a/src/less/blocks/portfolio-promo.less
+++ b/src/less/blocks/portfolio-promo.less
@@ -2,20 +2,21 @@
   position: relative;
   display: flex;
   align-items: flex-end;
-  height: 60vh;
+  min-height: 60vh;
   padding-right: var(--block-gap-horizontal, @block-gap-horizontal);
   padding-left: var(--block-gap-horizontal, @block-gap-horizontal);
+  padding-top: var(--header-height);
   padding-bottom: 24px;
   background-color: #000;
   overflow: hidden;
 
   @media (min-width: @breakpoint-md) {
-    height: 50vh;
+    min-height: 50vh;
     padding-bottom: 56px;
   }
 
   @media (min-width: @breakpoint-xl) {
-    height: 60vh;
+    min-height: 60vh;
   }
 }
 
