--- a/src/less/blocks/project-promo.less
+++ b/src/less/blocks/project-promo.less
@@ -3,14 +3,15 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  height: 80vh;
+  min-height: 80vh;
   padding-right: var(--block-gap-horizontal, @block-gap-horizontal);
   padding-left: var(--block-gap-horizontal, @block-gap-horizontal);
+  padding-top: var(--header-height);
   padding-bottom: 64px;
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.8));
 
   @media (min-width: @breakpoint-xl) {
-    height: 60vh;
+    min-height: 60vh;
     padding-bottom: 128px;
   }
 }
