--- a/src/less/blocks/showreel.less
+++ b/src/less/blocks/showreel.less
@@ -9,6 +9,17 @@
   padding-bottom: 56.25%;
 }
 
+.showreel__preview {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  z-index: 1;
+}
+
 .showreel__video {
   position: absolute;
   top: 0;
@@ -82,6 +93,7 @@
   line-height: 1.125rem;
   letter-spacing: 1px;
   text-transform: uppercase;
+  z-index: 1;
 
   @media (max-width: @breakpoint-xl - 1px) {
     display: none;
