--- a/src/less/blocks/work-card.less
+++ b/src/less/blocks/work-card.less
@@ -1,5 +1,9 @@
 .work-card {
   position: relative;
+  display: block;
+  color: @body-color;
+  background-image: none;
+  cursor: none;
 }
 
 .work-card__accent {
@@ -59,7 +63,7 @@
     transition-duration: 0.35s;
     transition-timing-function: ease-out;
     transition-property: background-size;
-    cursor: url(img/card-hover.svg) 60 60, auto;
+    cursor: none;
 
     &::before {
       content: '';
@@ -102,4 +106,26 @@
 .work-card__divider {
   padding-right: 8px;
   padding-left: 8px;
+}
+
+.work-card__target {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 120px;
+  height: 120px;
+  margin-top: -60px;
+  margin-left: -60px;
+  background-color: #fff;
+  border-radius: 50%;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.125rem;
+  line-height: 1.125rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  z-index: 1;
+  opacity: 0;
 }
