fix: current edits

--- a/src/less/blocks/services.less
+++ b/src/less/blocks/services.less
@@ -20,6 +20,7 @@
 .services__accent {
   @media (min-width: @breakpoint-lg) {
     width: 33.33%;
+    padding-bottom: 200px;
   }
 }
 
@@ -62,6 +63,11 @@
   @media (min-width: @breakpoint-xl) {
     margin-bottom: 88px;
   }
+}
+
+.services__video {
+  position: sticky;
+  top: 50px;
 }
 
 .services__images {
