--- a/src/less/blocks/works.less
+++ b/src/less/blocks/works.less
@@ -1,8 +1,3 @@
-// .works {
-//   overflow: hidden;
-//   position: relative;
-// }
-
 .works__header {
   display: flex;
   flex-wrap: wrap;
@@ -54,7 +49,7 @@
   margin-right: ~"calc(var(--block-gap-horizontal, @{block-gap-horizontal}) * -1)";
   margin-left: ~"calc(var(--block-gap-horizontal, @{block-gap-horizontal}) * -1)";
 
-  @media (min-width: @breakpoint-md) and (max-width: @breakpoint-xl - 1px) {
+  @media (min-width: @breakpoint-md) and (max-width: @breakpoint-lg - 1px) {
     width: 60%;
   }
 }
