fix: current edits

--- a/src/less/blocks/about.less
+++ b/src/less/blocks/about.less
@@ -1,3 +1,7 @@
+.about {
+  background-color: #fff;
+}
+
 .about__list {
   @media (min-width: @breakpoint-lg) {
     justify-content: space-between;
