--- a/src/less/blocks/drag-text.less
+++ b/src/less/blocks/drag-text.less
@@ -1,4 +1,6 @@
 .drag-text {
+  background-color: #fff;
+
   @media (max-width: @breakpoint-xl - 1px) {
     padding-top: 16px;
     padding-bottom: 16px;
