--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -6,7 +6,7 @@
   padding-left: var(--block-gap-horizontal, @block-gap-horizontal);
   padding-bottom: var(--block-gap-horizontal, @block-gap-vertical);
 
-  @media (max-width: @breakpoint-md - 1px) {
+  @media (max-width: @breakpoint-xl - 1px) {
     margin-top: -20px;
     z-index: 1;
     position: relative;
