--- a/src/less/blocks/gradient-title.less
+++ b/src/less/blocks/gradient-title.less
@@ -1,4 +1,5 @@
 .gradient-title {
+  background-color: #fff;
   padding-bottom: 0;
   padding-top: ~"calc(var(--header-height) + var(--block-gap-vertical, @{block-gap-vertical}))";
 }
