--- a/src/less/blocks/main.less
+++ b/src/less/blocks/main.less
@@ -7,10 +7,8 @@
 
   @media (min-width: @breakpoint-xl) {
     margin-bottom: 685px;
-    background-color: #fff;
+    background-color: @body-color;
     position: relative;
     z-index: 1;
-    overflow: hidden;
-    border-radius: 0 0 24px 24px;
   }
 }
