--- a/src/less/blocks/page.less
+++ b/src/less/blocks/page.less
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  overflow-x: hidden;
   position: relative;
+
+  @media (max-width: @breakpoint-md - 1px) {
+    overflow-x: hidden;
+  }
 }
